<resources>
    <string name="app_name">SuperHero2024</string>
    <string name="superhero_name_file_xml">SuperHero</string>
    <string name="estadisticas_de_poder">Estadísticas de Poder</string>
    <string name="inteligencia">Inteligencia</string>
    <string name="fuerza">Fuerza</string>
    <string name="velocidad">Velocidad</string>
    <string name="durabilidad">Durabilidad</string>
    <string name="poder">Poder</string>
    <string name="combate">Combate</string>
    <string name="trabajo">Trabajo</string>
    <string name="ocupacion">Ocupación</string>
    <string name="base">Base</string>
    <string name="biografia">Biografia</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="nombre_completo">nombre completo</string>
    <string name="alter_egos">alter egos</string>
    <string name="name">Nombre:</string>
    <string name="slug">Slug:</string>


    <string name="character_name_file_xml">Character</string>
    <string name="honkai_name_file_xml">Honkai</string>

    <string name="pokemon_name_file_xml">Pokemon</string>
    <string name="page_name_file_xml">Page</string>


    <string name="internet_error_activity_title">ERROR DE INTERNET</string>"
</resources>